Revision history for {{$dist->name}}

{{$NEXT}}

4.102340  2010-08-22 15:47:51 America/New_York
          add files to archive in name-length order (thanks, Jonathan Scott
          Duff)

          improve permissions of created files on Win32 (thanks, Curtis Jewell)

          do not clobber PERL5LIB during build (thanks, John Napiorkowski)

4.102221  2010-08-10 11:35:00 America/New_York
          use the new "mute" feature of Log::Dispatchouli to simplify listdeps
          make TextTemplate rendering errors fatal
          document the changes made in 4.102220

4.102220  2010-08-10 07:46:27 America/New_York
          pass a $dist var to TemplateModule templates

4.101900  2010-07-09 09:05:25 America/New_York
          add a "subdir" directory to UploadToCPAN

4.101880  2010-07-07 09:25:41 America/New_York
          stop being so pushy about running dzil setup (reported by AVAR)

          dzil setup will not die if ~/.dzil does not exist (reported by David
          Golden)

4.101831  2010-07-02 18:33:58 America/New_York
          correctly apply another patch from LA.pm that had been misapplied
          earlier

4.101830  2010-07-02 10:27:24 America/New_York
          remove the internal-only VersionBootstrap plugin; no longer needed

          fix a bad logging call in global config setup (LA.pm)

          tweak to allow tests to pass on 5.8.7 and earlier

4.101812  2010-06-30 23:02:15 America/New_York
          correctly set local global config root variable (Dave Rolsky)

4.101811  2010-06-30 09:51:43 America/New_York
          load File::pushd in Minter, where it is needed

4.101810  2010-06-30 09:41:59 America/New_York
          internal reorganization of test data

          tests should no longer fail if you have personal config in $HOME

4.101801  2010-06-29 21:17:15 America/New_York
          rename ClearPrereqs to RemovePrereqs

          the Zilla assembler no longer provides a default zilla_class
          (because doing so had lost any meaning)
