@@ -5,6 +5,11 @@ with qw(Dist::Zilla::Role::FileGatherer);
 
 use Dist::Zilla::File::FromCode;
 
+use Moose::Autobox;
+use MooseX::Types::Moose qw(ArrayRef Str);
+
+use namespace::autoclean;
+
 =head1 DESCRIPTION
 
 This plugins produces a F<dist.ini> file in a new dist, specifying the required
@@ -15,12 +20,61 @@ minting facilities improve.  For example, it will not specify any plugins.
 
 In the meantime, you may be happier with a F<dist.ini> template.
 
+=attr append_file
+
+This parameter may be a filename in the profile's directory to append to the
+generated F<dist.ini> with things like plugins.  In other words, if your make
+this file, called F<plugins.ini>:
+
+  [@Basic]
+  [NextRelease]
+  [@Git]
+
+...and your F<profile.ini> includes:
+
+  [DistINI]
+  append_file = plugins.ini
+
+...then the generated C<dist.ini> in a newly-minted dist will look something
+like this:
+
+  name    = My-New-Dist
+  author  = E. Xavier Ample <example@example.com>
+  license = Perl_5
+  copyright_holder = E. Xavier Ample
+  copyright_year   = 2010
+
+  [@Basic]
+  [NextRelease]
+  [@Git]
+
 =cut
+
+sub mvp_multivalue_args { qw(append_file) }
+
+has append_file => (
+  is  => 'ro',
+  isa => ArrayRef[ Str ],
+  default => sub { [] },
+);
 
 sub gather_files {
   my ($self, $arg) = @_;
 
   my $zilla = $self->zilla;
+
+  my $postlude = '';
+  $self->append_file->each_value(sub {
+    my $fn = $self->zilla->root->file($_);
+
+    $postlude .= do {
+      use autodie;
+      local $/;
+      open my $fh, '<', $fn;
+      <$fh>;
+    };
+  });
+
   my $code = sub {
     my @core_attrs = qw(name authors copyright_holder);
 
@@ -38,6 +92,8 @@ sub gather_files {
     $content .= sprintf "copyright_holder = %s\n", $zilla->copyright_holder;
     $content .= sprintf "copyright_year   = %s\n", (localtime)[5] + 1900;
     $content .= "\n";
+
+    $content .= $postlude;
   };
 
   my $file = Dist::Zilla::File::FromCode->new({
